tests/paczka1/fuzzy1/12098158.err
Error in line 4: A21 A356 86,4
Error in line 33: 9ey19k A599 -3,9
Error in line 31: 9ey19k A599 42,9
